--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <script src="js/filters.js"></script>
     <script src="js/services.js"></script>
     <script src="js/data.js"></script>
-    <script src="js/data_old.js"></script>
+    <!--<script src="js/data_old.js"></script>-->
 </head>
 <body>
 
