Added table calculation for all roads

--- a/app/index.html
+++ b/app/index.html
@@ -30,9 +30,10 @@
         <div class="collapse navbar-collapse">
             <ul id="headerMainNav" class="nav navbar-nav">
                 <li>
-                    <a href="#">
-                        <i class="icon-th-large"></i> Дороги
-                    </a>
+                    <a href="#">Дороги</a>
+                </li>
+                <li>
+                    <a href="#/workCalc">Расчет работы</a>
                 </li>
             </ul>
         </div>
